기기 토큰 조회 - 프록시 서버 설정 필요함
